--- a/portal.css
+++ b/portal.css
@@ -2,8 +2,31 @@ body {
     background-color: beige;
 }
 
+#content {
+    max-width: 800px;
+    background-color: beige;
+    margin: 0 auto;
+}
+
 nav {
     display: flex;
+    justify-content: center;
+}
+img {
+    width: 500px;
+    display: block;
+    margin: 0 auto;
+}
+
+p {
+    width: 40%;
+    text-align: center;
+    margin: 10px auto;
+    padding: 10px;
+}
+
+h1 {
+    font-size: 1.5em;
 }
 
 #primary {
@@ -16,6 +39,11 @@ a {
     text-decoration: none;
     padding: 10px;
     margin: 5px;
+}
+
+a:hover {
+    background-color: darkgray;
+    color: white;
 }
 
 .background {
