--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,10 +3,6 @@
     margin: 0 auto;
 }
 
-nav a {
-    text-align: center;
-}
-
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
 }
@@ -24,10 +20,11 @@ body {
 }
 
 header {
-    background-color: #fcfbfb;
+    background-color: #A7BDA1;
 }
 
 nav a {
+    text-align: center;
     background-color: #A7BDA1;
     color: #253656;
     text-decoration: none;
@@ -59,7 +56,7 @@ h4 {
 
 #background {
     height: 725px;
-    background-color: #fcfbfb;
+    background-color: #51453C;
 }
 
 .msg {
@@ -97,7 +94,7 @@ footer p a:hover {
 }
 
 .logo {
-    width 80px;
+    width: 80px;
 }
 
 .icon {
