--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Bubblegum+Sans&display=swap');
+
+
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -15,12 +19,28 @@ main section {
     text-align: center;
 }
 
+main section img {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #fcfbfb;
+    font-family: 'Inter', Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
 }
 
 header {
     background-color: #A7BDA1;
+}
+
+#logo_link {
+    padding-top: 5px;
 }
 
 nav a {
@@ -28,6 +48,7 @@ nav a {
     background-color: #A7BDA1;
     color: #253656;
     text-decoration: none;
+    padding: 35px;
 }
 
 nav a:hover {
@@ -37,6 +58,9 @@ nav a:hover {
 
 .home-title {
     color: #253656;
+    font-family: 'Bubblegum Sans', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -47,6 +71,10 @@ h4 {
     background-color: #A7BDA1;
     color: #253656;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -54,26 +82,48 @@ h4 {
     color: #fcfbfb;
 }
 
+.card-img {
+    border: 10px solid #51453C;
+}
+
 #background {
     height: 725px;
     background-color: #51453C;
 }
 
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
 .msg {
     background-color: #253656;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2 {
     color: #fcfbfb;
+    font-family: 'Bubblegum Sans', 'Bradley Hand', sans-serif;
 }
 
 .msg p {
     color: #fcfbfb;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+
 
 footer {
     background-color: #A7BDA1;
     color: #51453C;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a {
@@ -93,11 +143,11 @@ footer p a:hover {
     text-decoration: underline;
 }
 
-.logo {
-    width: 80px;
+footer .social img {
+    padding-top: 15px;
 }
 
-.icon {
+.logo {
     width: 80px;
 }
 
