--- a/grid-practice.css
+++ b/grid-practice.css
@@ -87,3 +87,9 @@ p {
     grid-column: 9/10;
     grid-row: 5/6;
 }
+
+@media screen and (max-width: 700px) {
+    main {
+        display: block;
+    }
+}
