--- a/mktproject/styles/site-plan.css
+++ b/mktproject/styles/site-plan.css
@@ -1,29 +1,29 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Nunito+Sans:opsz,wght@6..12,200&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #49CCCC   ;
-  --secondary-color: #F7314A ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #49CCCC;
+  --secondary-color: #F7314A;
+  --accent1-color: #949595;
+  --accent2-color: #FAFAFA;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Black Ops One";
+  --paragraph-font: "Nunito Sans", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #49CCCC;  /* headlines on a white background */ 
+  --headline-color-on-color: #FAFAFA; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #F7314A; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #FAFAFA; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #F7314A  ;
+  --nav-link-color: #000000;
+  --nav-background-color: #49CCCC;
+  --nav-hover-link-color: #FAFAFA;
+  --nav-hover-background-color: #949595;
 }
 
 
