--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,7 +5,6 @@ header {
     grid-template-columns: 150px auto;
 }
 
-
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -13,6 +12,32 @@ header {
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-img {
+    width: 100%;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-msg h4 {
+    color: white;
 }
 
 .button-box {
@@ -73,7 +98,7 @@ nav a:hover {
 }
 
 .home-title {
-    color: #253656;
+    color: #fcfbfb;
     font-family: 'Bubblegum Sans', 'Bradley Hand', sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -205,30 +230,104 @@ footer .social img {
     width: 80px;
 }
 
-#hero {
+
+/* new FAQ page */
+
+#faq-banner {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-
 }
 
-#hero-box {
+#faq-banner-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
 }
 
-#hero-img {
+#faq-banner-img {
     width: 100%;
 }
 
-#hero-msg {
+#faq-title h1{
+    color: #253656;
+    font-family: 'Bubblegum Sans', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    z-index: 1;
+    margin-top: 170px;
+    opacity: 100%;
+}
+
+#faq-title {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
-#hero-msg h4 {
-    color: white;
+#faq-title div, h1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    border-radius: 10px;
+}
+
+#faq-title h1 {
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+    z-index: 1;
+}
+
+#title-background {
+    width: 100%;
+    height: 100%;
+
+    background-color: #fff;
+    opacity: 50%;
+}
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+.active, .accordion:hover {
+    background-color: #ccc;
+  }
+  
+.accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+.active:after {
+    content: "\2212";
+  }
+  
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+ 
+.faq-background {
+    height: 150px;
+    background-color: #51453C;
+    margin: auto;
+    padding: 0%;
 }
 
 @media screen and (max-width: 900px) {
