--- a/mktproject/styles/style.css
+++ b/mktproject/styles/style.css
@@ -10,7 +10,7 @@ header {
     width: 80px;
 }
 
-#logo_link {
+#mktg-logo {
     padding-top: 5px;
     justify-self: center;
     align-self: center;
