--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -260,9 +260,11 @@ footer .social img {
 #faq-title {
     grid-column: 2/3;
     grid-row: 1/2;
-    margin-top: 100px;
+
     display: grid;
     grid-template-columns: 1fr;
+
+    align-content: center;
 }
 
 #faq-title div, h1 {
