--- a/mktproject/styles/style.css
+++ b/mktproject/styles/style.css
@@ -145,6 +145,7 @@ h2 {
 footer {
     background-color: #949595;
     color: #000000;
+    font-size: 0.8em;
     padding: 25px 50px;
     margin-top: 10px;
     display: flex;
